--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.1.2.RELEASE'
     id 'io.spring.dependency-management' version '1.0.6.RELEASE'
+    id 'com.google.cloud.tools.jib' version '1.0.0'
 }
 
 group = 'com.bmuschko'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
-version = '1.0.0'
+version = '2.0.0'
 
 repositories {
     jcenter()
@@ -19,8 +20,20 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     runtime 'com.h2database:h2'
     runtime 'org.postgresql:postgresql'
+    def junitJupiterVersion = '5.3.2'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    def testcontainersVersion = '1.10.6'
+    testImplementation "org.testcontainers:junit-jupiter:$testcontainersVersion"
+    testImplementation "org.testcontainers:postgresql:$testcontainersVersion"
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
 }
+
+jib.to.image = "bmuschko/todo-web-service:${project.version}"
